@@ -27,8 +27,7 @@
 
 class GigEdit {
 public:
-    int run();
-    int run(const char* pFileName);
+    int run(int argc, char* argv[]);
     int run(gig::Instrument* pInstrument);
 
     sigc::signal<void, gig::File*>& signal_file_structure_to_be_changed();
@@ -40,8 +39,6 @@ public:
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_to_be_changed();
     sigc::signal<void, gig::DimensionRegion*>& signal_dimreg_changed();
     sigc::signal<void, gig::Sample*/*old*/, gig::Sample*/*new*/>& signal_sample_ref_changed();
-
-void test(gig::File*);
 
 private:
     sigc::signal<void, gig::File*> file_structure_to_be_changed_signal;
